53 version sans définir taille div

--- a/CSS/53 sprites/style.css
+++ b/CSS/53 sprites/style.css
@@ -3,9 +3,11 @@
     padding: 0;
 
 }
+body{
+    text-align: center;
+}
 .social{
-    margin: auto;
-    width: 390px;
+    display: inline-block;
 }
 a{
     display: inline-block;
