add comment to css

--- a/CSS/TP 2 - Maquette Golden/style.css
+++ b/CSS/TP 2 - Maquette Golden/style.css
@@ -201,6 +201,12 @@ h2+p{
     font-style: italic;
 }
 
+
+
+/***********************************
+Gestion des icones de reseaux sociaux
+******************************************/
+
 .ResoIco{
     display: inline-block;
     width: 40px;
