--- a/SASS/TRANS/app/templates/_index.scss
+++ b/SASS/TRANS/app/templates/_index.scss
@@ -95,3 +95,12 @@ li{
   top: 50%;
   max-width:300px;
 }
+
+#portrait{
+    position: relative;
+    div{
+        display: flex;
+        position: absolute;
+        bottom:0;
+    }
+}
